<resources>
    <string name="app_name">MiRuta</string>

    <!--Main (Inicio de sesion)-->
    <string name="main_title">Mi ruta</string>
    <string name="main_email">Correo</string>
    <string name="main_password">Contraseña</string>
    <string name="main_login">Iniciar sesion</string>
    <string name="questionRegiter">¿Aun no tienes cuenta?</string>

    <string name="content_main_logo">Logo</string>


    <!--Register activity-->
    <string name="register_id">Identificacion</string>
    <string name="register_name">Nombre</string>

    <string name="btnImage">Foto</string>
    <string name="btnRegister">Registrarse</string>

    <string name="titleDialogPin">Pin de comprobacion</string>
    <string name="btnVerificationPin">Comprobar pin</string>


    <!--Map-->
    <string name="content_btnCenterRoute">Boton centrar ruta</string>

    <string name="content_btnAddStop">Boton añadir parada</string>


    <!--Home-->
    <string name="email_user">example@gmail.com</string>

    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_description">Activa para un cambio visual</string>

    <string name="content_img_user">Imagen del usuario</string>
    <string name="content_img_dark_mode">Imagen de modo oscuro</string>

    <string name="uploadImage">Subir imagen</string>

    <string name="logout">Cerrar sesion</string>
    <string name="titleDialogLogout">¿Salir de tu cuenta?</string>
    <string name="cancelLogout">Cancelar</string>


    <!--Menu-->
    <string name="home">Inicio</string>
    <string name="route">Rutas</string>
    <string name="stop">Paradas</string>
    <string name="favorite">Favoritos</string>
    <string name="admin">Admin</string>
    <string name="bus">Bus</string>


    <!--Fragment route-->
    <string name="searchRoute">Buscar ruta</string>
    <string name="startRoute">Inicio ruta</string>
    <string name="destinationRoute">Destino ruta</string>

    <string name="content_row">Imagen flecha</string>

    <!--Item route-->
    <string name="map">Mapa</string>
    <string name="hour">00:00:00</string>
    <string name="schedule">L/M/X/J/V</string>

    <string name="content_btnFavorite">Boton favorito</string>
    <string name="content_btnMap">Boton mapa</string>
    <string name="content_img_start">Imagen inicio</string>
    <string name="content_img_destination">Imagen destino</string>

    <!--Item route stops-->
    <string name="content_img_circle">Imagen circulo</string>


    <!--Fragment stop-->
    <string name="searchNameStop">Nombre parada</string>

    <!--Item stop-->
    <string name="address">Direccion: </string>

    <string name="content_img_stop">Imagen de la parada</string>

    <!--dialog stop-->
    <string name="latitudeStop">Latitud</string>
    <string name="longitudeStop">Longitud</string>
    <string name="routesStopTitle">Rutas asignadas</string>

    <string name="content_img_close">Imagen para cerrar el detalle</string>


    <!--Fragment bus-->
    <string name="plateBus">Bus: %s</string>
    <string name="welcome">Bienvenido %s</string>

    <!--Item route - bus-->
    <string name="initRoute">Iniciar ruta</string>


    <string name="content_img_rorNext">Imagen flecha</string>



    <!--dialog stop-->
    <string name="saveStop">Guardar parada</string>
    <string name="addressStop">Direccion</string>
    <string name="nameStop">Nombre</string>
    <string name="latStop">Latitud</string>
    <string name="lngStop">Longitud</string>
    <string name="linkImageStop">Url imagen</string>



</resources>