<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle"
        app:tint="@color/accent"
        android:contentDescription="@string/content_img_circle">
    </ImageView>

    <TextView
        android:id="@+id/tvStartRoute_stop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        tools:text="@string/startRoute"
        android:theme="@style/text"
        android:gravity="center">
    </TextView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_row_next"
        android:contentDescription="@string/content_img_rorNext"
        app:tint="@color/black">
    </ImageView>

    <TextView
        android:id="@+id/tvDestinationRoute_stop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        tools:text="@string/destinationRoute"
        android:theme="@style/text"
        android:gravity="center">
    </TextView>

</LinearLayout>