<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_cards"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">


        <TextView
            android:id="@+id/tvStartRouteBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/styleSubtitle"
            tools:text="@string/startRoute"
            android:layout_gravity="center|start">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvStartHourBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/text"
                tools:text="@string/hour"
                android:layout_marginEnd="10dp">
            </TextView>

            <TextView
                android:id="@+id/tvEndHourBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/text"
                tools:text="@string/hour"
                android:layout_marginEnd="10dp">
            </TextView>

            <TextView
                android:id="@+id/tvScheduleBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/text"
                tools:text="@string/schedule">
            </TextView>

        </LinearLayout>


        <TextView
            android:id="@+id/tvDestinationRouteBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/styleSubtitle"
            tools:text="@string/destinationRoute"
            android:layout_gravity="center|start">
        </TextView>


        <Button
            android:id="@+id/btnInitRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initRoute"
            android:textColor="@color/black"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/content_btnMap">
        </Button>


    </LinearLayout>


</androidx.cardview.widget.CardView>