<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_cards"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhotoStop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@drawable/ic_circle"
            android:contentDescription="@string/content_img_stop"
            android:background="@color/white">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/styleSubtitle"
                android:text="@string/stop">
            </TextView>

            <TextView
                android:id="@+id/tvAddressStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/text"
                android:text="@string/address">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView >