<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.MapActivityAdmin">

    <LinearLayout
        android:id="@+id/tbMapAdmin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_main_logo">
        </ImageView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/main_title"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <ImageView
            android:id="@+id/btnCloseMapAdmin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="13dp"
            android:contentDescription="@string/content_img_close"
            android:src="@drawable/ic_close"
            app:tint="@color/white">
        </ImageView>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapAdmin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbMapAdmin"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/fragment_bus">
    </androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/accent"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/content_btnAddStop">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>